--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -4,20 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xtra Blog</title>
+    <title>Blogs - Gamma Prime</title>
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <!-- https://fontawesome.com/ -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <!-- https://fonts.google.com/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/templatemo-xtra-blog.css" rel="stylesheet">
-    <!--
-    
-TemplateMo 553 Xtra Blog
-
-https://templatemo.com/tm-553-xtra-blog
-
--->
 </head>
 
 <body>
@@ -26,53 +19,47 @@ https://templatemo.com/tm-553-xtra-blog
             <button class="navbar-toggler" type="button" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
-            <div class="tm-site-header">
-                <div class="mb-3 mx-auto tm-site-logo"><i class="fas fa-times fa-2x"></i></div>
-                <h1 class="text-center">Xtra Blog</h1>
-            </div>
+
             <nav class="tm-nav" id="tm-nav">
                 <ul>
                     <li class="tm-nav-item active">
-                        <a href="index.html" class="tm-nav-link">
-                            <i class="fas fa-home"></i> Blog Home
-                        </a>
-                    </li>
-                    <li class="tm-nav-item">
-                        <a href="post.html" class="tm-nav-link">
-                            <i class="fas fa-pen"></i> Single Post
-                        </a>
-                    </li>
-                    <li class="tm-nav-item">
-                        <a href="about.html" class="tm-nav-link">
-                            <i class="fas fa-users"></i> About Xtra
-                        </a>
-                    </li>
-                    <li class="tm-nav-item">
-                        <a href="contact.html" class="tm-nav-link">
-                            <i class="far fa-comments"></i> Contact Us
+                        <a href="blogs.html" class="tm-nav-link">
+                            <i class="fas fa-home"></i> Gamma Prime
                         </a>
                     </li>
                 </ul>
             </nav>
-            <div class="tm-mb-65">
-                <a rel="nofollow" href="https://fb.com/templatemo" class="tm-social-link">
+            <div class="tm-mb-65 d-flex justify-content-center">
+                <a rel="nofollow" href="#" class="tm-social-link">
                     <i class="fab fa-facebook tm-social-icon"></i>
                 </a>
-                <a href="https://twitter.com" class="tm-social-link">
+                <a href="#" class="tm-social-link">
                     <i class="fab fa-twitter tm-social-icon"></i>
                 </a>
-                <a href="https://instagram.com" class="tm-social-link">
+                <a href="#" class="tm-social-link">
                     <i class="fab fa-instagram tm-social-icon"></i>
                 </a>
-                <a href="https://linkedin.com" class="tm-social-link">
+                <a href="#" class="tm-social-link">
                     <i class="fab fa-linkedin tm-social-icon"></i>
                 </a>
             </div>
-            <p class="tm-mb-80 pr-5 text-white">
-                Xtra Blog is a multi-purpose HTML template from TemplateMo website. Left side is a sticky menu bar. Right side content will scroll up and down.
-            </p>
+            <!-- <p class="tm-mb-80 pr-5 text-white">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio eligendi recusandae repellendus voluptates cumque porro.
+            </p> -->
+
+            <div class="tm-site-footer">
+                <div class="d-flex copyright">
+                    <img style="width: 2rem; height: 2rem;" src="../logo1.png" alt="" srcset="">
+                    <p style="margin: 3px 5px;">Gamma Prime <span>-</span> <span style="color: #149DDD;">&copy;2021</span></p>
+                </div>
+            </div>
         </div>
     </header>
+
+    <div>
+
+    </div>
+
     <div class="container-fluid">
         <main class="tm-main">
             <!-- Search form -->
