--- a/blogs/contact.html
+++ b/blogs/contact.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Xtra Blog</title>
-	<link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
-	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> <!-- https://fonts.google.com/ -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Xtra Blog</title>
+    <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <!-- https://fontawesome.com/ -->
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <!-- https://fonts.google.com/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/templatemo-xtra-blog.css" rel="stylesheet">
-<!--
+    <link href="css/blogs.css" rel="stylesheet">
+    <!--
     
 TemplateMo 553 Xtra Blog
 
@@ -16,34 +19,39 @@ https://templatemo.com/tm-553-xtra-blog
 
 -->
 </head>
+
 <body>
-	<header class="tm-header" id="tm-header">
+    <header class="tm-header" id="tm-header">
         <div class="tm-header-wrapper">
             <button class="navbar-toggler" type="button" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
             <div class="tm-site-header">
-                <div class="mb-3 mx-auto tm-site-logo"><i class="fas fa-times fa-2x"></i></div>            
+                <div class="mb-3 mx-auto tm-site-logo"><i class="fas fa-times fa-2x"></i></div>
                 <h1 class="text-center">Xtra Blog</h1>
             </div>
-            <nav class="tm-nav" id="tm-nav">            
+            <nav class="tm-nav" id="tm-nav">
                 <ul>
-                    <li class="tm-nav-item"><a href="index.html" class="tm-nav-link">
-                        <i class="fas fa-home"></i>
-                        Blog Home
-                    </a></li>
-                    <li class="tm-nav-item"><a href="post.html" class="tm-nav-link">
-                        <i class="fas fa-pen"></i>
-                        Single Post
-                    </a></li>
-                    <li class="tm-nav-item"><a href="about.html" class="tm-nav-link">
-                        <i class="fas fa-users"></i>
-                        About Xtra
-                    </a></li>
-                    <li class="tm-nav-item active"><a href="contact.html" class="tm-nav-link">
-                        <i class="far fa-comments"></i>
-                        Contact Us
-                    </a></li>
+                    <li class="tm-nav-item">
+                        <a href="index.html" class="tm-nav-link">
+                            <i class="fas fa-home"></i> Blog Home
+                        </a>
+                    </li>
+                    <li class="tm-nav-item">
+                        <a href="post.html" class="tm-nav-link">
+                            <i class="fas fa-pen"></i> Single Post
+                        </a>
+                    </li>
+                    <li class="tm-nav-item">
+                        <a href="about.html" class="tm-nav-link">
+                            <i class="fas fa-users"></i> About Xtra
+                        </a>
+                    </li>
+                    <li class="tm-nav-item active">
+                        <a href="contact.html" class="tm-nav-link">
+                            <i class="far fa-comments"></i> Contact Us
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <div class="tm-mb-65">
@@ -70,34 +78,33 @@ https://templatemo.com/tm-553-xtra-blog
             <!-- Search form -->
             <div class="row tm-row">
                 <div class="col-12">
-                    <form method="GET" class="form-inline tm-mb-80 tm-search-form">                
+                    <form method="GET" class="form-inline tm-mb-80 tm-search-form">
                         <input class="form-control tm-search-input" name="query" type="text" placeholder="Search..." aria-label="Search">
                         <button class="tm-search-button" type="submit">
                             <i class="fas fa-search tm-search-icon" aria-hidden="true"></i>
-                        </button>                                
+                        </button>
                     </form>
-                </div>                
-            </div>            
+                </div>
+            </div>
             <div class="row tm-row tm-mb-45">
                 <div class="col-12">
                     <hr class="tm-hr-primary tm-mb-55">
-                    <div class="gmap_canvas"> <!-- Google Map -->
-                        <iframe width="100%" height="477" id="gmap_canvas"
-                            src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                    <div class="gmap_canvas">
+                        <!-- Google Map -->
+                        <iframe width="100%" height="477" id="gmap_canvas" src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                     </div>
-                </div>                
+                </div>
             </div>
             <div class="row tm-row tm-mb-120">
                 <div class="col-12">
                     <h2 class="tm-color-primary tm-post-title tm-mb-60">Contact Us</h2>
                 </div>
                 <div class="col-lg-7 tm-contact-left">
-                    <form method="POST" action="" class="mb-5 ml-auto mr-0 tm-contact-form">                        
+                    <form method="POST" action="" class="mb-5 ml-auto mr-0 tm-contact-form">
                         <div class="form-group row mb-4">
                             <label for="name" class="col-sm-3 col-form-label text-right tm-color-primary">Name</label>
                             <div class="col-sm-9">
-                                <input class="form-control mr-0 ml-auto" name="name" id="name" type="text" required>                            
+                                <input class="form-control mr-0 ml-auto" name="name" id="name" type="text" required>
                             </div>
                         </div>
                         <div class="form-group row mb-4">
@@ -115,14 +122,14 @@ https://templatemo.com/tm-553-xtra-blog
                         <div class="form-group row mb-5">
                             <label for="message" class="col-sm-3 col-form-label text-right tm-color-primary">Message</label>
                             <div class="col-sm-9">
-                                <textarea class="form-control mr-0 ml-auto" name="message" id="message" rows="8" required></textarea>                                
+                                <textarea class="form-control mr-0 ml-auto" name="message" id="message" rows="8" required></textarea>
                             </div>
                         </div>
                         <div class="form-group row text-right">
                             <div class="col-12">
-                                <button class="tm-btn tm-btn-primary tm-btn-small">Submit</button>                        
-                            </div>                            
-                        </div>                                
+                                <button class="tm-btn tm-btn-primary tm-btn-small">Submit</button>
+                            </div>
+                        </div>
                     </form>
                 </div>
                 <div class="col-lg-5 tm-contact-right">
@@ -139,10 +146,7 @@ https://templatemo.com/tm-553-xtra-blog
                         <a href="mailto:info@company.com" class="tm-color-gray">info@company.com</a>
                     </span>
                     <p class="mb-5 tm-line-height-short">
-                        Maecenas eu mi eu dui cursus
-                        consequat non eu metus. Morbi ac
-                        turpis eleifend, commodo purus
-                        eget, commodo mauris.
+                        Maecenas eu mi eu dui cursus consequat non eu metus. Morbi ac turpis eleifend, commodo purus eget, commodo mauris.
                     </p>
                     <ul class="tm-social-links">
                         <li class="mb-2">
@@ -167,7 +171,7 @@ https://templatemo.com/tm-553-xtra-blog
                         </li>
                     </ul>
                 </div>
-            </div>      
+            </div>
             <footer class="row tm-row">
                 <div class="col-md-6 col-12 tm-color-gray">
                     Design: <a rel="nofollow" target="_parent" href="https://templatemo.com" class="tm-external-link">TemplateMo</a>
@@ -181,4 +185,5 @@ https://templatemo.com/tm-553-xtra-blog
     <script src="js/jquery.min.js"></script>
     <script src="js/templatemo-script.js"></script>
 </body>
+
 </html>
