--- a/generalDashboard/admins.html
+++ b/generalDashboard/admins.html
@@ -238,7 +238,10 @@
                             <div class="row mb-3">
                                 <label for="inputText" class="col-sm-2 col-form-label"></label>
                                 <div class="col-sm-10">
-                                    <input type="text" placeholder="@Assignee" class="form-control">
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text" id="basic-addon1">@</span>
+                                        <input type="text" class="form-control" placeholder="Assignee" aria-label="Username" aria-describedby="basic-addon1">
+                                    </div>
                                 </div>
                             </div>
 
