--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -67,7 +67,7 @@
                     <hr class="tm-hr-primary">
                     <a href="post.html" class="effect-lily tm-post-link tm-pt-60">
                         <div class="tm-post-link-inner">
-                            <img src="../landingPageAssets/img/pic 3.jpeg" alt="Image" class="img-fluid">
+                            <img src="img/img-06.jpg" alt="Image" class="img-fluid">
                         </div>
                         <span class="position-absolute tm-new-badge">New</span>
                         <h2 class="tm-pt-30 tm-color-primary tm-post-title">Why Machine Learning?</h2>
@@ -89,7 +89,7 @@
                     <hr class="tm-hr-primary">
                     <a href="post.html" class="effect-lily tm-post-link tm-pt-60">
                         <div class=" tm-post-link-inner">
-                            <img src="../landingPageAssets/img/pic 2.jpeg" alt="Image" class="img-fluid">
+                            <img src="img/img-05.jpg" alt="Image" class="img-fluid">
                         </div>
                         <span class="position-absolute tm-new-badge">New</span>
                         <h2 class="tm-pt-30 tm-color-primary tm-post-title">The Future of Work</h2>
