--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -55,8 +55,8 @@
             <div class="row tm-row">
                 <div class="col-12">
                     <form method="GET" class="form-inline tm-mb-80 tm-search-form">
-                        <input class="form-control tm-search-input" name="query" type="text" placeholder="Search..." aria-label="Search">
-                        <button class="tm-search-button" type="submit">
+                        <input style="border-radius: 1rem;" class="form-control tm-search-input" name="query" type="text" placeholder="Search..." aria-label="Search">
+                        <button style="border-radius: 1rem;" class="tm-search-button" type="submit">
                             <i class="fas fa-search tm-search-icon" aria-hidden="true"></i>
                         </button>
                     </form>
