--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container" data-aos="zoom-out" data-aos-delay="100">
             <h1><span><i style="color: #0b72a2;">Gamma Prime</i></span></h1>
             <!-- <h2 style="color: #fff;"><b>Democratising Access to AI</b></h2> -->
-            <h2 style="color: white;"><span class="typed" data-typed-items="Democratising Access to AI"></span></h2>
+            <h2 style="color: white;"><span class="typed" data-typed-items="Democratising Access to AI, The revolution is here, Disrupting the status quo, The lights are turning ON in Africa"></span></h2>
 
             <div class="d-flex">
                 <a href="#courses" class="btn-get-started scrollto">Get Started</a>
